# multimodal-humor-recognition

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  requirements.txt  setup.py
results/predictions/albertina-900m-portuguese-ptbr-encoder/: fold_0.csv  fold_1.csv  fold_2.csv  fold_3.csv  fold_4.csv  fold_5.csv  fold_6.csv  fold_7.csv  fold_8.csv  fold_9.csv
results/predictions/albertina-900m-portuguese-ptbr-encoder_concatenation/: fold_0.csv  fold_1.csv  fold_2.csv  fold_3.csv  fold_4.csv  fold_5.csv  fold_6.csv  fold_7.csv  fold_8.csv  fold_9.csv
results/predictions/albertina-900m-portuguese-ptbr-encoder_pooling/: fold_0.csv  fold_1.csv  fold_2.csv  fold_3.csv  fold_4.csv  fold_5.csv  fold_6.csv  fold_7.csv  fold_8.csv  fold_9.csv
results/predictions/albertina-900m-portuguese-ptbr-encoder_shared/: fold_0.csv  fold_1.csv  fold_2.csv  fold_3.csv  fold_4.csv  fold_5.csv  fold_6.csv  fold_7.csv  fold_8.csv  fold_9.csv
results/predictions/albertina-900m-portuguese-ptpt-encoder/: fold_0.csv  fold_1.csv  fold_2.csv  fold_3.csv  fold_4.csv  fold_5.csv  fold_6.csv  fold_7.csv  fold_8.csv  fold_9.csv
results/predictions/albertina-900m-portuguese-ptpt-encoder_concatenation/: fold_0.csv  fold_1.csv  fold_2.csv  fold_3.csv  fold_4.csv  fold_5.csv  fold_6.csv  fold_7.csv  fold_8.csv  (+1 more)
results/sweeps/: history.parquet  runs.parquet  sweeps.parquet
scripts/notebooks/: evaluation.ipynb  multimodal_classification.ipynb  multimodal_hyperparameter_tuning.py  pipelined_classification.ipynb  shap_explanation.ipynb  visualize_hyperparameter_tuning.ipynb  visualize_hyperparameter_tuning.py
scripts/tuning/: get_wandb_data.py  multimodal_hyperparameter_tuning.py
src/humor_recognition/: configs.py  dataset.py  models.py  pipelines.py  tasks.py
(+124 files in other folders)
