[project]
name = "humor-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets",
    "ipykernel",
    "ipywidgets",
    "matplotlib",
    "pandas",
    "scikit-learn",
    "setuptools",
    "tables",
    "torch",
    "torchaudio",
    "torchvision",
    "tqdm",
    "transformers[torch]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "autopep8",
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchaudio = { index = "pytorch" }
torchvision = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
