[project]
name = "humor-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "datasets",
    "ipykernel",
    "ipywidgets",
    "matplotlib",
    "pandas",
    "scikit-learn",
    "setuptools",
    "tables",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm",
    "transformers[torch]",
    "marimo",
    "wandb",
    "altair>=6.2.1",
    "vegafusion>=2.0.3",
    "vl-convert-python>=1.9.0",
    "nbformat>=5.10.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "autopep8",
    "ruff>=0.15.17",
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchaudio = { index = "pytorch" }
torchvision = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
